# substructure-hbb-classifier

./: README.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
app/: preprocess.py  train.py
hbbclass/: plotting.py  preprocessing.py
hbbclass/dnn/: config.py  model.py  utils.py
hbbclass/logistic/: config.py
notebooks/: preprocessing.ipynb  testing.ipynb
