[metadata]
name = substructure-hbb-classifier
author = fcelli
author_email = fedecel93@gmail.com
version = 0.1
url = https://github.com/fcelli/substructure-hbb-classifier
project_urls =
    Bug Tracker = https://github.com/fcelli/substructure-hbb-classifier/issues

[options]
package_dir =
    = hbbclass
packages = find:
python_requires = >=3.9
install_requires =
    numpy==1.24.2
    pandas==1.5.3
    uproot==5.0.4
    matplotlib==3.7.1
    notebook==6.5.3
    tensorflow==2.11.0
    scikit-learn==1.2.1

[options.packages.find]
where = hbbclass